@startuml Room_Management_Class

!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBorderColor #333
skinparam arrowColor #333
skinparam classBackgroundColor #F8F8F8

' ============== MAIN CLASSES ==============
class Room {
  {field} -roomId: String
  {field} -roomNumber: String
  {field} -roomType: RoomType
  {field} -status: RoomStatus
  {field} -capacity: Int
  {field} -beds: List<Bed>
  {field} -amenities: List<Amenity>
  {field} -equipment: List<Equipment>
  {field} -floor: Int
  {field} -lastMaintenanceDate: Date
  {field} -nextMaintenanceDate: Date
  --
  {method} +addBed(bed: Bed): void
  {method} +removeBed(bedId: String): void
  {method} +addAmenity(amenity: Amenity): void
  {method} +addEquipment(equipment: Equipment): void
  {method} +updateStatus(newStatus: RoomStatus): void
  {method} +getAvailableBeds(): List<Bed>
  {method} +getOccupancyRate(): Float
}

class Bed {
  {field} -bedId: String
  {field} -bedNumber: Int
  {field} -status: BedStatus
  {field} -bedType: BedType
  {field} -patient: Patient
  {field} -assignedDate: Date
  {field} -dischargeDate: Date
  --
  {method} +assignPatient(patient: Patient): void
  {method} +releasePatient(): void
  {method} +updateStatus(newStatus: BedStatus): void
}

class Patient {
  {field} -patientId: String
  {field} -firstName: String
  {field} -lastName: String
  {field} -dateOfBirth: Date
  {field} -medicalRecordNumber: String
  {field} -contactNumber: String
  {field} -admissionDate: Date
  {field} -dischargeDate: Date
  --
  {method} +getFullName(): String
  {method} +getAge(): Int
}

class Amenity {
  {field} -amenityId: String
  {field} -name: String
  {field} -description: String
  {field} -status: AmenityStatus
  --
  {method} +updateStatus(newStatus: AmenityStatus): void
}

class Equipment {
  {field} -equipmentId: String
  {field} -name: String
  {field} -type: String
  {field} -serialNumber: String
  {field} -status: EquipmentStatus
  {field} -lastServiceDate: Date
  {field} -nextServiceDate: Date
  --
  {method} +reportMaintenance(): void
  {method} +updateStatus(newStatus: EquipmentStatus): void
}

' ============== ENUMERATIONS ==============
enum RoomType {
  GENERAL_WARD
  PRIVATE_ROOM
  ICU
  PEDIATRIC
  MATERNITY
  ISOLATION
  EMERGENCY
}

enum RoomStatus {
  AVAILABLE
  OCCUPIED
  UNDER_MAINTENANCE
  RESERVED
  CLOSED
}

enum BedType {
  STANDARD
  PREMIUM
  ICU_BED
  PEDIATRIC_BED
  STRETCHER
}

enum BedStatus {
  AVAILABLE
  OCCUPIED
  MAINTENANCE
  RESERVED
  OUT_OF_SERVICE
}

enum AmenityStatus {
  FUNCTIONAL
  DAMAGED
  UNDER_REPAIR
  NEEDS_SERVICE
}

enum EquipmentStatus {
  OPERATIONAL
  IN_MAINTENANCE
  NEEDS_CALIBRATION
  OUT_OF_SERVICE
}

' ============== RELATIONSHIPS ==============
Room "1" --> "0..*" Bed : contains
Room "1" --> "0..*" Amenity : has
Room "1" --> "0..*" Equipment : has
Bed "1" --> "0..1" Patient : occupied by
Room "1" --> "1" RoomType : is type of
Room "1" --> "1" RoomStatus : has status
Bed "1" --> "1" BedType : is type of
Bed "1" --> "1" BedStatus : has status
Amenity "1" --> "1" AmenityStatus : has status
Equipment "1" --> "1" EquipmentStatus : has status

@enduml